# GraphicsHostApp

./: .gitignore  CMakeLists.txt  GraphicsHostApp.sln  README.md
GraphicsHostApp/: App.axaml  App.axaml.cs  GraphicsHostApp.csproj
GraphicsHostApp.Desktop/: GraphicsHostApp.Desktop.csproj  Program.cs
GraphicsHostApp.Desktop/Properties/: launchSettings.json
GraphicsHostApp.OpenGL/: CMakeLists.txt  GraphicsHostApp.OpenGL.cpp  GraphicsHostApp.OpenGL.h
GraphicsHostApp.OpenGL/Graphics/: Camera.cpp  Camera.h  GLObject.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h
GraphicsHostApp.OpenGL/glad/include/glad/: glad.h
GraphicsHostApp.OpenGL/glad/src/: glad.c
GraphicsHostApp/Contracts/Services/: IDrawingService.cs
GraphicsHostApp/Graphics/: Camera.cs  Disposable.cs  IGraphicsHost.cs  Vertex.cs
GraphicsHostApp/Graphics/OpenGL/: Buffer.cs  Frame.cs  GraphicsResource.cs  Mesh.cs  RenderPipeline.cs  Renderer.cs  Shader.cs  Texture.cs
GraphicsHostApp/Helpers/: MathExtensions.cs  MathHelper.cs  MeshFactory.cs
GraphicsHostApp/Resources/: README.md
GraphicsHostApp/Resources/Shaders/: Canvas.frag  Canvas.vert  Simple.frag  Simple.vert  SolidColor.frag  SolidColor.vert
GraphicsHostApp/Services/: ExternalDrawingService.cs  SimpleDrawingService.cs
GraphicsHostApp/ViewModels/: MainViewModel.cs  ViewModelBase.cs
GraphicsHostApp/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
